RESOLVED FIXED19798
REGRESSION: Masks have several problems in trunk
https://bugs.webkit.org/show_bug.cgi?id=19798
Summary REGRESSION: Masks have several problems in trunk
Nikolas Zimmermann
Reported 2008-06-28 03:32:18 PDT
All problems covered by existing LayoutTests. Unfortunately, when pixel tests aren't looked at, there is no way anyone could notice :( svg/W3C-SVG-1.1/masking-mask-01-b.svg - masks seem translated svg/custom/mask-inside-defs.svg - broken svg/custom/visibility-override-mask.svg - broken
Attachments
Initial patch (7.31 KB, patch)
2008-08-12 03:41 PDT, Nikolas Zimmermann
hyatt: review+
Nikolas Zimmermann
Comment 1 2008-08-11 21:24:41 PDT
Nikolas Zimmermann
Comment 2 2008-08-12 03:41:51 PDT
Created attachment 22744 [details] Initial patch Would be nice if David could have a look, as one of his refactorings broke SVG <mask> support.
Dave Hyatt
Comment 3 2008-08-12 13:57:48 PDT
Comment on attachment 22744 [details] Initial patch r=me
Nikolas Zimmermann
Comment 4 2008-08-12 14:11:47 PDT
Landed in r35694.
Note You need to log in before you can comment on or make changes to this bug.