Reviewed by Dave.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=19798
Masks are translated, and the mask images are swapped on the y-axis.

Turned out that http://trac.webkit.org/changeset/31830/trunk/WebCore/svg/graphics/cg/SVGResourceMaskerCg.mm
is guilty. GraphicsContext::clipToImageBuffer() does some extra transformations that SVGResourcesMaskerCg does not want.

Long term goal is to remove the SVGResource*/SVGPaintServer* classes anyway, so it's okay to duplicate
the "clip to image buffer" functionality, in the CG specific SVGResourceMaskerCg class - as it was before.


Canonical link: https://commits.webkit.org/28103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35694 268f45cc-cd09-0410-ab3c-d52691b4dbfc